k8s/user-service-bluegreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-blue
  namespace: streamflix
  labels:
    app: user-service
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
      version: blue
  template:
    metadata:
      labels:
        app: user-service
        version: blue
    spec:
      containers:
      - name: user-service
        image: ${REGISTRY}/user-service:v1
        ports:
        - containerPort: 5000
