k8s/rating-service-bluegreen.yaml
# RATING SERVICE — BLUE (v1)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service-blue
  namespace: streamflix
  labels:
    app: rating-service
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
      version: blue
  template:
    metadata:
      labels:
        app: rating-service
        version: blue
    spec:
      containers:
        - name: rating-service
          image: ${REGISTRY}/rating-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 6
            timeoutSeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "150m"
              memory: "256Mi"

---
# RATING SERVICE — GREEN (v2)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service-green
  namespace: streamflix
  labels:
    app: rating-service
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
      version: green
  template:
    metadata:
      labels:
        app: rating-service
        version: green
    spec:
      containers:
        - name: rating-service
          image: ${REGISTRY}/rating-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 6
            timeoutSeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "150m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  namespace: streamflix
spec:
  selector:
    app: rating-service
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
